--- a/Epilepsy - classification.ipynb
+++ b/Epilepsy - classification.ipynb
@@ -3382,7 +3382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# spliting the data into train and test"
+    "# splitting the data into train and test"
    ]
   },
   {
